<resources>
    <string name="app_name">Alert Display</string>
    <string name="toast">Simple Toast</string>
    <string name="simple_snackbar">Simple Snackbar</string>
    <string name="snackbar_action_call_back">Snackbar with Action Callback</string>
    <string name="snackbar_custom_action_call_back">Snackbar with Custom A.C.</string>

    <string name="circular_progress">Circular Progress Bar</string>
    <string name="circular_progress_alert">Circular Progress Bar Alert</string>

    <string name="alert_dialog">Alert Dialogs</string>

    <array name="cities">
        <item>Chittagong</item>
        <item>Comilla</item>
        <item>Dhaka</item>
        <item>Feni</item>
        <item>Khulna</item>
        <item>Pabna</item>
        <item>Rajshahi</item>
        <item>Sylhet</item>
        <item>Tangail</item>
    </array>
</resources>
